--- a/platformio.ini
+++ b/platformio.ini
@@ -1,41 +1,55 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+[platformio]
+
+
 [env]
+default_envs = ESP32
+
 platform = espressif32
 framework = arduino
-platform_packages =
-    framework-arduinoespressif32 @ https://github.com/husarnet/arduino-esp32/releases/download/1.0.4-1/arduino-husarnet-esp32.zip
-lib_deps =
-    ; Until our pull requests are merged you need to use AsyncTCP with our fixes for IPv6
-    Husarnet ESP32
-    https://github.com/bxparks/AceButton.git
-    ; https://github.com/DominikN/AutoConnect.git
-    https://github.com/Bodmer/TFT_eSPI.git
+platform_packages = 
+	framework-arduinoespressif32 @ https://github.com/husarnet/arduino-esp32/releases/download/1.0.4-1/arduino-husarnet-esp32.zip
+lib_deps = 
+	Husarnet ESP32
+	https://github.com/bxparks/AceButton.git
+	https://github.com/husarnet/AsyncTCP.git
+	ESP Async WebServer
+	https://github.com/Bodmer/TFT_eSPI.git
 
 [env:esp32dev]
 board = esp32dev
 monitor_speed = 115200
 upload_speed = 921600
-
 monitor_filters = esp32_exception_decoder, default
 board_build.partitions = partitions_custom.csv
-
-; https://github.com/Bodmer/TFT_eSPI/blob/master/Tools/PlatformIO/Configuring%20options.txt
-; https://github.com/Bodmer/TFT_eSPI/blob/master/User_Setups/Setup25_TTGO_T_Display.h
-build_flags =
-  -DUSER_SETUP_LOADED=1
-  -DST7789_DRIVER=1
-  -DTFT_WIDTH=135
-  -DTFT_HEIGHT=240
-  -DCGRAM_OFFSET=1
-  -DTFT_MISO=-1
-  -DTFT_MOSI=19
-  -DTFT_SCLK=18
-  -DTFT_CS=5
-  -DTFT_DC=16
-  -DTFT_RST=23
-  -DTFT_BL=4
-  -DLOAD_GLCD=1
-  -DSMOOTH_FONT=1
-  -TFT_BACKLIGHT_ON=HIGH
-  -DLOAD_FONT2=1
-  -DSPI_FREQUENCY=40000000
-  -DSPI_READ_FREQUENCY=6000000
+board_build.embed_txtfiles = 
+	src/index.html
+build_flags = 
+	-DCONFIG_ASYNC_TCP_RUNNING_CORE=1
+	-DCONFIG_ASYNC_TCP_USE_WDT=0
+	-DUSER_SETUP_LOADED=1
+	-DST7789_DRIVER=1
+	-DTFT_WIDTH=135
+	-DTFT_HEIGHT=240
+	-DCGRAM_OFFSET=1
+	-DTFT_MISO=-1
+	-DTFT_MOSI=19
+	-DTFT_SCLK=18
+	-DTFT_CS=5
+	-DTFT_DC=16
+	-DTFT_RST=23
+	-DTFT_BL=4
+	-DLOAD_GLCD=1
+	-DSMOOTH_FONT=1
+	-TFT_BACKLIGHT_ON=HIGH
+	-DLOAD_FONT2=1
+	-DSPI_FREQUENCY=40000000
+	-DSPI_READ_FREQUENCY=6000000
