platformio.ini fixes

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,22 +1,11 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-[platformio]
-
-
 [env]
-default_envs = ESP32
 
 platform = espressif32
 framework = arduino
+
 platform_packages = 
 	framework-arduinoespressif32 @ https://github.com/husarnet/arduino-esp32/releases/download/1.0.4-1/arduino-husarnet-esp32.zip
+
 lib_deps = 
 	Husarnet ESP32
 	https://github.com/bxparks/AceButton.git
@@ -24,14 +13,20 @@ lib_deps =
 	ESP Async WebServer
 	https://github.com/Bodmer/TFT_eSPI.git
 
+
+
 [env:esp32dev]
+
 board = esp32dev
 monitor_speed = 115200
 upload_speed = 921600
+
 monitor_filters = esp32_exception_decoder, default
+
 board_build.partitions = partitions_custom.csv
-board_build.embed_txtfiles = 
-	src/index.html
+
+board_build.embed_txtfiles = src/index.html
+
 build_flags = 
 	-DCONFIG_ASYNC_TCP_RUNNING_CORE=1
 	-DCONFIG_ASYNC_TCP_USE_WDT=0
