--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,6 @@ lib_deps =
 	https://github.com/Bodmer/TFT_eSPI.git
 
 
-
 [env:esp32dev]
 
 board = esp32dev
@@ -23,7 +22,7 @@ upload_speed = 921600
 
 monitor_filters = esp32_exception_decoder, default
 
-board_build.partitions = partitions_custom.csv
+board_build.partitions = min_spiffs.csv
 
 board_build.embed_txtfiles = src/index.html
 
